--- a/package.json
+++ b/package.json
@@ -12,9 +12,12 @@
     "@types/node": "20.2.1",
     "@types/react": "18.2.6",
     "@types/react-dom": "18.2.4",
+    "axios": "^1.4.0",
     "next": "13.4.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-spinners": "^0.13.8",
+    "sass": "^1.62.1",
     "typescript": "5.0.4"
   }
 }
